# 2.11BSD_X44

./: .bzrignore  .clang-format  .cproject  .gitattributes  .gitignore  .project  16-Bit Support.md  CMakeLists.txt  COPYRIGHT  COPYRIGHT.md  LICENCE.md  LICENSE  Makefile  New Text Document.txt  README.md  TODO.md  build.sh  completed.md  i386 kernel remapping .txt  missing devs.txt  netbsdtoolchain.sh  wdc.c
.codelite/: 2.11BSD.workspace
.metadata/: version.ini
contrib/: Makefile
contrib/byacc/: Makefile.inc  byacc2netbsd
contrib/elftoolchain/: Makefile  RELEASE-NOTES
contrib/expat/: Makefile.inc
contrib/fetch/: Makefile.inc
contrib/file/: Makefile.inc  file2netbsd
contrib/flex/: Makefile.inc  flex2netbsd
contrib/gnu/: Makefile
contrib/less/: Makefile.inc
contrib/libarchive/: Makefile  Makefile.inc
contrib/libc++/: Makefile.inc
contrib/libevent/: Makefile.inc
contrib/liblzf/: Makefile.inc
contrib/mdocml/: Makefile.inc
contrib/nawk/: Makefile
contrib/ntp/: Makefile.inc
contrib/nvi/: Makefile.inc  nvi2netbsd
contrib/oscompat/: Makefile
contrib/pkg_install/: Makefile.inc
contrib/postfix/: Makefile.inc  postfix2netbsd
contrib/tcsh/: Makefile  Makefile.inc
crypto/: Makefile  Makefile.libressl  Makefile.openssl
crypto/heimdal/: Makefile.inc  heimdal2netbsd
crypto/libressl/: Makefile  mkpc  pkgconfig.mk
crypto/openssh/: Makefile.inc
distrib/: Makefile
distrib.new/common/: mtree.common  termcap.mini
distrib.new/i386/: Makefile
distrib.new/miniroot/: Makefile  list
distrib.new/sets/: checkflist  makesums  maketars
distrib/common/: Makefile.bootcd  Makefile.distrib  Makefile.makedev  Makefile.mdset  Makefile.tarfloppy  protocols  services
distrib/i386/: Makefile
distrib/miniroot/: Makefile  list
distrib/notes/: Makefile
distrib/sets/: Makefile  README  checkflist  makedlist  makeflist  makesums  maketars
distrib/utils/: Makefile
etc/: MAKEDEV.local  MAKEDEV.tmpl  Makefile  Makefile.isoimage  Makefile.kernels  Makefile.params  aliases  crontab  disktab  floppytab  ftpusers  group  hosts  hosts.equiv  inetd.conf  man.conf  master.passwd  mk.conf  mrouted.conf  named.conf  netstart  networks  ntp.conf  printcap  profile  protocols  rc  rc.conf  rc.local  rc.shutdown  rc.subr  shells  syslog.conf
etc/defaults/: Makefile  periodic.conf  rc.conf
etc/dlist/: bsd.dlist
etc/etc.i386/: MAKEDEV  MAKEDEV.conf  Makefile.inc  TwoBSD.dist.base  disktab  fstab.sd  fstab.wd  i386.dlist  ttys
etc/mtree/: 2.11BSD.dist.base  211BSD.dist  Makefile  TwoBSD.dist  TwoBSD.dist.base  TwoBSD.dist.i386  special
etc/namedb/: 127  Makefile  bind.keys  localhost  loopback.v6  root.cache
etc/rc.d/: DISKS  Makefile  bootparams  makemandb  mountcritlocal
etc/root/: Makefile  dot.cshrc  dot.klogin  dot.login  dot.profile  dot.shrc
etc/skel/: Makefile
h/: map.h
i386/: asm.h  kern_i386.c  machdep.c  reg.h  seg.h  segments.h  trap.c
i386/config/: genassym.c  isym.c
include/: Makefile  Makefile.old  a.out.h  ar.h  assert.h  bitops.h  bitstring.h  cdbr.h  cdbw.h  complex.h  cpio.h  ctype.h  curses.h  db.h  dbm.h  dirent.h  disktab.h  dlfcn.h  encoding.h  endian.h  err.h  errlst.h  errno.h  fcntl.h  fenv.h  float.h  fmtmsg.h  fnmatch.h  fstab.h  fts.h  ftw.h  getopt.h  glob.h  grp.h  hesiod.h  iconv.h  ident.h  ieeefp.h  ifaddrs.h  inttypes.h  (+73 more)
include/OLD/: Makefile.inc  dk.h  psout.h
include/arpa/: Makefile.inc  ftp.h  inet.h  nameser.h  telnet.h  tftp.h
include/hash/: Makefile.inc  md2.h  md4.h  md5.h  rmd160.h  sha1.h  sha2.h  sha3.h
include/old/: dk.h  psout.h
include/protocols/: Makefile.inc  dumprestor.h  routed.h  rwhod.h  talkd.h  timed.h
include/rpc/: Makefile  auth.h  auth_unix.h  clnt.h  nettype.h  pmap_clnt.h  pmap_prot.h  pmap_rmt.h  rpc.h  rpc_msg.h  rpcb_clnt.h  svc.h  svc_auth.h  types.h  xdr.h  xdr_mem.c  xdr_rec.c  xdr_stdio.c
include/rpcsvc/: yp_prot.h  ypclnt.h
include/ssp/: Makefile.inc  ssp.h
kernel/i386/: cpu.c  segments.h  sel.h  specialreg.h  trap.c
lib/: MANIFEST  Makefile
lib/csu/: Makefile
lib/libarch/: Makefile
lib/libbz2/: Makefile
lib/libc/: MANIFEST  Makefile  Makefile.inc  README.md  shlib_version
lib/libcompat/: Makefile
lib/libcurses/: Makefile
lib/libdbm/: dbm.h  ndbm.h
lib/libedit/: histedit.h  termcap.h
lib/libelf/: Makefile  shlib_version
lib/libelftc/: Makefile  shlib_version
lib/libexecinfo/: Makefile  execinfo.h  symtab.c
lib/libintl/: gettext.c  libintl.h  libintl_local.h
lib/libipsec/: ipsec_dump_policy.c  policy_parse.y
lib/libkern/: Makefile
lib/libkvm/: Makefile  kvm_private.h
lib/libmp/: pow.c
lib/libom/: erf.c  sqrt.c
lib/libpci/: Makefile  pci.h  pci_bus.c
lib/libradius/: Makefile
lib/libresolv/: Makefile
lib/libskey/: skeysubr.c
lib/libtermcap/: termcap.h  tgoto.c
lib/libterminfo/: term.h  term_private.h
lib/libutil/: Makefile  getmaxpartitions.c  login.c  login_tty.c  logwtmp.c  logwtmpx.c  pty.c  shlib_version  stat_flags.c
lib/libvmf/: shlib_version  vmf.c
lib/liby/: Makefile  libmai.c  libzer.c
lib/libz/: shlib_version  zlib.pc
libexec/: Makefile  Makefile.inc
libexec/acctd/: Makefile  acctd.c
libexec/atrun/: Makefile
libexec/comsat/: Makefile  comsat.c  comsat_2.c
libexec/ctimed/: Makefile  ctimed.c
libexec/ftpd/: Makefile  extern.h  ftpcmd.y  ftpd.c  popen.c
libexec/getty/: Makefile  extern.h  get_date.c  gettytab.c  gettytab.h  init.c  main.c  pathnames.h  subr.c
libexec/httpd/: Makefile  bozohttpd.c
libexec/identd/: Makefile  identd.c  identd.h  pf.c
libexec/ld.aout_so/: ld.h  malloc.c  md-prologue.c  rtld.c  shlib.c  (+1 more)
man/: Makefile.inc  makewhatis.sh
sbin/: Makefile
share/: Makefile  Makefile.inc
stand/: Makefile  stand.mk
sys/: Makefile  kern_sysctl.c  tty_tb.c
toolchains/: gcctoolchain.sh  llvmtoolchain.sh  netbsdtoolchain.sh
tools/: Makefile  Makefile.gmakehost  Makefile.gnuhost  Makefile.gnuwrap  Makefile.host  Makefile.nbincludes  headerlist  mkheaderlist.sh
usr/: .project
usr.bin/: MANIFEST  Makefile
usr.lib/: MANIFEST  Makefile
usr.sbin/: MANIFEST  Makefile
(+6745 files in other folders)
