cmake_minimum_required(VERSION 3.14)
project(2_11BSD C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(conf)
include_directories(dev)
include_directories(h)
include_directories(i386)
include_directories(sys)

add_executable(2_11BSD
        conf/checksys.c
        conf/ioconf.c
        conf/netbind.c
        conf/param.c
        h/acct.h
        h/buf.h
        h/callout.h
        h/clist.h
        h/conf.h
        h/dir.h
        h/disk.h
        h/disklabel.h
        h/dk.h
        h/dkbad.h
        h/domain.h
        h/errno.h
        h/exec.h
        h/file.h
        h/fs.h
        h/gprof.h
        h/ingreslock.h
        h/inode.h
        h/ioctl.h
        h/ioctl_compat.h
        h/kernel.h
        h/localopts.h
        h/map.h
        h/mbuf.h
        h/mount.h
        h/msgbuf.h
        h/mtio.h
        h/namei.h
        h/param.h
        h/proc.h
        h/protosw.h
        h/ptrace.h
        h/quota.h
        h/reboot.h
        h/resource.h
        h/select.h
        h/signal.h
        h/signalvar.h
        h/socket.h
        h/socketvar.h
        h/stat.h
        h/stddef.h
        h/sysctl.h
        h/syslog.h
        h/systm.h
        h/tablet.h
        h/text.h
        h/time.h
        h/timeb.h
        h/times.h
        h/trace.h
        h/tty.h
        h/ttychars.h
        h/ttydefaults.h
        h/ttydev.h
        h/types.h
        h/uba.h
        h/uio.h
        h/un.h
        h/unpcb.h
        h/user.h
        h/utsname.h
        h/vcmd.h
        h/vm.h
        h/vmmac.h
        h/vmmeter.h
        h/vmparam.h
        h/vmsystm.h
        h/wait.h
        i386/machdep.c
        i386/include/reg.h
        i386/sel.h
        i386/trap.c
        sys/ingreslock.c
        sys/init_main.c
        sys/init_sysent.c
        sys/kern_acct.c
        sys/kern_clock.c
        sys/kern_descrip.c
        sys/kern_exec.c
        sys/kern_exit.c
        sys/kern_fork.c
        sys/kern_mman.c
        sys/kern_proc.c
        sys/kern_prot.c
        sys/kern_prot2.c
        sys/kern_resource.c
        sys/kern_sig.c
        sys/kern_sig2.c
        sys/kern_subr.c
        sys/kern_synch.c
        sys/kern_sysctl.c
        sys/kern_time.c
        sys/kern_xxx.c
        sys/quota_kern.c
        sys/quota_subr.c
        sys/quota_sys.c
        sys/quota_ufs.c
        sys/subr_log.c
        sys/subr_prf.c
        sys/subr_rmap.c
        sys/subr_xxx.c
        sys/sys_generic.c
        sys/sys_inode.c
        sys/sys_kern.c
        sys/sys_net.c
        sys/sys_pipe.c
        sys/sys_process.c
        sys/sys_socket.c
        sys/syscalls.c
        sys/tty.c
        sys/tty_conf.c
        sys/tty_pty.c
        sys/tty_subr.c
        sys/tty_tb.c
        sys/tty_tty.c
        sys/ufs_alloc.c
        sys/ufs_bio.c
        sys/ufs_bmap.c
        sys/ufs_disksubr.c
        sys/ufs_dsort.c
        sys/ufs_fio.c
        sys/ufs_inode.c
        sys/ufs_mount.c
        sys/ufs_namei.c
        sys/ufs_subr.c
        sys/ufs_syscalls.c
        sys/ufs_syscalls2.c
        sys/uipc_domain.c
        sys/uipc_mbuf.c
        sys/uipc_proto.c
        sys/uipc_socket.c
        sys/uipc_socket2.c
        sys/uipc_syscalls.c
        sys/uipc_usrreq.c
        sys/vfs_vnops.c
        sys/vm_proc.c
        sys/vm_sched.c
        sys/vm_swap.c
        sys/vm_swp.c
        sys/vm_text.c
        i386/segments.h
        i386/specialreg.h
        i386/cpu.c)
