cmake_minimum_required(VERSION 3.14)
project(2_11BSD C)

set(CMAKE_C_STANDARD 11)

include_directories(bootstrap/boot)
include_directories(kernel/h)
include_directories(kernel/i386)
include_directories(kernel/i386/include)
include_directories(kernel/i386/include/db)
include_directories(kernel/i386/include/inline)
include_directories(kernel/i386/include/inline/inet)
include_directories(kernel/i386/include/inline/kernel)
include_directories(kernel/i386/include/inline/string)

add_executable(2_11BSD
        bootstrap/boot/boot.c
        bootstrap/boot/prf.c
        bootstrap/boot/printf.c
        bootstrap/boot/saerrno.h
        bootstrap/boot/saio.h
        bootstrap/boot/saioctl.h
        bootstrap/config/breadxx.c
        bootstrap/config/srt0_i386.c
        bootstrap/trimhd.c
        kernel/conf/checksys.c
        kernel/conf/ioconf.c
        kernel/conf/netbind.c
        kernel/conf/param.c
        kernel/h/acct.h
        kernel/h/buf.h
        kernel/h/callout.h
        kernel/h/clist.h
        kernel/h/conf.h
        kernel/h/dir.h
        kernel/h/disk.h
        kernel/h/disklabel.h
        kernel/h/dk.h
        kernel/h/dkbad.h
        kernel/h/domain.h
        kernel/h/errno.h
        kernel/h/exec.h
        kernel/h/file.h
        kernel/h/fs.h
        kernel/h/gprof.h
        kernel/h/ingreslock.h
        kernel/h/inode.h
        kernel/h/ioctl.h
        kernel/h/ioctl_compat.h
        kernel/h/kernel.h
        kernel/h/localopts.h
        kernel/h/map.h
        kernel/h/mbuf.h
        kernel/h/mount.h
        kernel/h/msgbuf.h
        kernel/h/mtio.h
        kernel/h/namei.h
        kernel/h/param.h
        kernel/h/proc.h
        kernel/h/protosw.h
        kernel/h/ptrace.h
        kernel/h/quota.h
        kernel/h/reboot.h
        kernel/h/resource.h
        kernel/h/select.h
        kernel/h/signal.h
        kernel/h/signalvar.h
        kernel/h/socket.h
        kernel/h/socketvar.h
        kernel/h/stat.h
        kernel/h/stddef.h
        kernel/h/sysctl.h
        kernel/h/syslog.h
        kernel/h/systm.h
        kernel/h/tablet.h
        kernel/h/text.h
        kernel/h/time.h
        kernel/h/timeb.h
        kernel/h/times.h
        kernel/h/trace.h
        kernel/h/tty.h
        kernel/h/ttychars.h
        kernel/h/ttydefaults.h
        kernel/h/ttydev.h
        kernel/h/types.h
        kernel/h/uba.h
        kernel/h/uio.h
        kernel/h/un.h
        kernel/h/unpcb.h
        kernel/h/user.h
        kernel/h/utsname.h
        kernel/h/vcmd.h
        kernel/h/vm.h
        kernel/h/vmmac.h
        kernel/h/vmmeter.h
        kernel/h/vmparam.h
        kernel/h/vmsystm.h
        kernel/h/wait.h
        kernel/i386/config/genassym.c
        kernel/i386/config/isym.c
        kernel/i386/include/db/db_machdep.h
        kernel/i386/include/db/eflags.h
        kernel/i386/include/inline/inet/htonl.h
        kernel/i386/include/inline/inet/htons.h
        kernel/i386/include/inline/inet/in_cksumiphdr.h
        kernel/i386/include/inline/inet/ntohl.h
        kernel/i386/include/inline/inet/ntohs.h
        kernel/i386/include/inline/kernel/copyin.h
        kernel/i386/include/inline/kernel/copyin_.h
        kernel/i386/include/inline/kernel/copyinstr.h
        kernel/i386/include/inline/kernel/copyout.h
        kernel/i386/include/inline/kernel/copyout_.h
        kernel/i386/include/inline/kernel/copyoutstr.h
        kernel/i386/include/inline/kernel/copystr.h
        kernel/i386/include/inline/kernel/imax.h
        kernel/i386/include/inline/kernel/imin.h
        kernel/i386/include/inline/kernel/insque.h
        kernel/i386/include/inline/kernel/lmax.h
        kernel/i386/include/inline/kernel/lmin.h
        kernel/i386/include/inline/kernel/max.h
        kernel/i386/include/inline/kernel/min.h
        kernel/i386/include/inline/kernel/remque.h
        kernel/i386/include/inline/kernel/remrq.h
        kernel/i386/include/inline/kernel/setrq.h
        kernel/i386/include/inline/kernel/ulmax.h
        kernel/i386/include/inline/kernel/ulmin.h
        kernel/i386/include/inline/string/bcmp.h
        kernel/i386/include/inline/string/bcopy.h
        kernel/i386/include/inline/string/bzero.h
        kernel/i386/include/inline/string/ffs.h
        kernel/i386/include/inline/string/memcmp.h
        kernel/i386/include/inline/string/memcpy.h
        kernel/i386/include/inline/string/memmove.h
        kernel/i386/include/inline/string/memset.h
        kernel/i386/include/inline/string/strlen.h
        kernel/i386/include/inline/inet.h
        kernel/i386/include/inline/io.h
        kernel/i386/include/inline/kernel.h
        kernel/i386/include/inline/stdlib.h
        kernel/i386/include/inline/string.h
        kernel/i386/include/ansi.h
        kernel/i386/include/cpu.h
        kernel/i386/include/endian.h
        kernel/i386/include/float.h
        kernel/i386/include/frame.h
        kernel/i386/include/icu.h
        kernel/i386/include/limits.h
        kernel/i386/include/npx.h
        kernel/i386/include/param.h
        kernel/i386/include/pcb.h
        kernel/i386/include/pmap.h
        kernel/i386/include/proc.h
        kernel/i386/include/prototypes.h
        kernel/i386/include/psl.h
        kernel/i386/include/reg.h
        kernel/i386/include/segments.h
        kernel/i386/include/sel.h
        kernel/i386/include/stdarg.h
        kernel/i386/include/trap.h
        kernel/i386/include/tss.h
        kernel/i386/include/types.h
        kernel/i386/include/vmparam.h
        kernel/i386/asm.h
        kernel/i386/cpu.c
        kernel/i386/machdep.c
        kernel/i386/pmap.c
        kernel/i386/segments.h
        kernel/i386/sel.h
        kernel/i386/sigframe.h
        kernel/i386/specialreg.h
        kernel/i386/trap.c
        kernel/sys/ingreslock.c
        kernel/sys/init_main.c
        kernel/sys/init_sysent.c
        kernel/sys/kern_acct.c
        kernel/sys/kern_clock.c
        kernel/sys/kern_descrip.c
        kernel/sys/kern_exec.c
        kernel/sys/kern_exit.c
        kernel/sys/kern_fork.c
        kernel/sys/kern_mman.c
        kernel/sys/kern_proc.c
        kernel/sys/kern_prot.c
        kernel/sys/kern_prot2.c
        kernel/sys/kern_resource.c
        kernel/sys/kern_sig.c
        kernel/sys/kern_sig2.c
        kernel/sys/kern_subr.c
        kernel/sys/kern_synch.c
        kernel/sys/kern_sysctl.c
        kernel/sys/kern_time.c
        kernel/sys/kern_xxx.c
        kernel/sys/quota_kern.c
        kernel/sys/quota_subr.c
        kernel/sys/quota_sys.c
        kernel/sys/quota_ufs.c
        kernel/sys/subr_log.c
        kernel/sys/subr_prf.c
        kernel/sys/subr_rmap.c
        kernel/sys/subr_xxx.c
        kernel/sys/sys_generic.c
        kernel/sys/sys_inode.c
        kernel/sys/sys_kern.c
        kernel/sys/sys_net.c
        kernel/sys/sys_pipe.c
        kernel/sys/sys_process.c
        kernel/sys/sys_socket.c
        kernel/sys/syscalls.c
        kernel/sys/tty.c
        kernel/sys/tty_conf.c
        kernel/sys/tty_pty.c
        kernel/sys/tty_subr.c
        kernel/sys/tty_tb.c
        kernel/sys/tty_tty.c
        kernel/sys/ufs_alloc.c
        kernel/sys/ufs_bio.c
        kernel/sys/ufs_bmap.c
        kernel/sys/ufs_disksubr.c
        kernel/sys/ufs_dsort.c
        kernel/sys/ufs_fio.c
        kernel/sys/ufs_inode.c
        kernel/sys/ufs_mount.c
        kernel/sys/ufs_namei.c
        kernel/sys/ufs_subr.c
        kernel/sys/ufs_syscalls.c
        kernel/sys/ufs_syscalls2.c
        kernel/sys/uipc_domain.c
        kernel/sys/uipc_mbuf.c
        kernel/sys/uipc_proto.c
        kernel/sys/uipc_socket.c
        kernel/sys/uipc_socket2.c
        kernel/sys/uipc_syscalls.c
        kernel/sys/uipc_usrreq.c
        kernel/sys/vfs_vnops.c
        kernel/sys/vm_proc.c
        kernel/sys/vm_sched.c
        kernel/sys/vm_swap.c
        kernel/sys/vm_swp.c
        kernel/sys/vm_text.c)
