cmake_minimum_required(VERSION 3.14)
project(2_11BSD C)
set(2_11BSD_VERSION_MAJOR 1)
set(2_11BSD_VERSION_MINOR 0)
set(CMAKE_C_STANDARD 11)

include_directories(bootstrap/boot)
include_directories(kernel/h)
include_directories(kernel/i386)
include_directories(kernel/i386/h)
include_directories(kernel/i386/h/db)
include_directories(kernel/i386/h/inline)
include_directories(kernel/i386/h/inline/inet)
include_directories(kernel/i386/h/inline/kernel)
include_directories(kernel/i386/h/inline/string)

add_executable(2_11BSD
        bootstrap/boot/boot.c
        bootstrap/boot/prf.c
        bootstrap/boot/printf.c
        bootstrap/boot/saerrno.h
        bootstrap/boot/saio.h
        bootstrap/boot/saioctl.h
        bootstrap/config/breadxx.c
        bootstrap/config/srt0_i386.c
        bootstrap/trimhd.c
        kernel/conf/checksys.c
        kernel/conf/genassym.c
        kernel/conf/ioconf.c
        kernel/conf/isym.c
        kernel/conf/netbind.c
        kernel/conf/param.c
        kernel/h/acct.h
        kernel/h/buf.h
        kernel/h/callout.h
        kernel/h/cdefs.h
        kernel/h/clist.h
        kernel/h/conf.h
        kernel/h/dir.h
        kernel/h/disk.h
        kernel/h/disklabel.h
        kernel/h/dk.h
        kernel/h/dkbad.h
        kernel/h/domain.h
        kernel/h/errno.h
        kernel/h/exec.h
        kernel/h/file.h
        kernel/h/fs.h
        kernel/h/gprof.h
        kernel/h/ingreslock.h
        kernel/h/inode.h
        kernel/h/ioctl.h
        kernel/h/ioctl_compat.h
        kernel/h/kernel.h
        kernel/h/ktrace.h
        kernel/h/localopts.h
        kernel/h/map.h
        kernel/h/mbuf.h
        kernel/h/mount.h
        kernel/h/msgbuf.h
        kernel/h/mtio.h
        kernel/h/namei.h
        kernel/h/param.h
        kernel/h/proc.h
        kernel/h/protosw.h
        kernel/h/ptrace.h
        kernel/h/quota.h
        kernel/h/reboot.h
        kernel/h/resource.h
        kernel/h/select.h
        kernel/h/signal.h
        kernel/h/signalvar.h
        kernel/h/socket.h
        kernel/h/socketvar.h
        kernel/h/stat.h
        kernel/h/stddef.h
        kernel/h/sysctl.h
        kernel/h/syslog.h
        kernel/h/systm.h
        kernel/h/tablet.h
        kernel/h/text.h
        kernel/h/time.h
        kernel/h/timeb.h
        kernel/h/times.h
        kernel/h/trace.h
        kernel/h/tty.h
        kernel/h/ttychars.h
        kernel/h/ttydefaults.h
        kernel/h/ttydev.h
        kernel/h/types.h
        kernel/h/uba.h
        kernel/h/uio.h
        kernel/h/un.h
        kernel/h/unpcb.h
        kernel/h/user.h
        kernel/h/utsname.h
        kernel/h/vcmd.h
        kernel/h/vm.h
        kernel/h/vmmac.h
        kernel/h/vmmeter.h
        kernel/h/vmparam.h
        kernel/h/vmsystm.h
        kernel/h/wait.h
        kernel/i386/h/db/db_machdep.h
        kernel/i386/h/db/eflags.h
        kernel/i386/h/inline/inet/htonl.h
        kernel/i386/h/inline/inet/htons.h
        kernel/i386/h/inline/inet/in_cksumiphdr.h
        kernel/i386/h/inline/inet/ntohl.h
        kernel/i386/h/inline/inet/ntohs.h
        kernel/i386/h/inline/kernel/copyin.h
        kernel/i386/h/inline/kernel/copyin_.h
        kernel/i386/h/inline/kernel/copyinstr.h
        kernel/i386/h/inline/kernel/copyout.h
        kernel/i386/h/inline/kernel/copyout_.h
        kernel/i386/h/inline/kernel/copyoutstr.h
        kernel/i386/h/inline/kernel/copystr.h
        kernel/i386/h/inline/kernel/imax.h
        kernel/i386/h/inline/kernel/imin.h
        kernel/i386/h/inline/kernel/insque.h
        kernel/i386/h/inline/kernel/lmax.h
        kernel/i386/h/inline/kernel/lmin.h
        kernel/i386/h/inline/kernel/max.h
        kernel/i386/h/inline/kernel/min.h
        kernel/i386/h/inline/kernel/remque.h
        kernel/i386/h/inline/kernel/remrq.h
        kernel/i386/h/inline/kernel/setrq.h
        kernel/i386/h/inline/kernel/ulmax.h
        kernel/i386/h/inline/kernel/ulmin.h
        kernel/i386/h/inline/string/bcmp.h
        kernel/i386/h/inline/string/bcopy.h
        kernel/i386/h/inline/string/bzero.h
        kernel/i386/h/inline/string/ffs.h
        kernel/i386/h/inline/string/memcmp.h
        kernel/i386/h/inline/string/memcpy.h
        kernel/i386/h/inline/string/memmove.h
        kernel/i386/h/inline/string/memset.h
        kernel/i386/h/inline/string/strlen.h
        kernel/i386/h/inline/inet.h
        kernel/i386/h/inline/io.h
        kernel/i386/h/inline/kernel.h
        kernel/i386/h/inline/stdlib.h
        kernel/i386/h/inline/string.h
        kernel/i386/h/ansi.h
        kernel/i386/h/cpu.h
        kernel/i386/h/endian.h
        kernel/i386/h/float.h
        kernel/i386/h/frame.h
        kernel/i386/h/icu.h
        kernel/i386/h/limits.h
        kernel/i386/h/npx.h
        kernel/i386/h/param.h
        kernel/i386/h/pcb.h
        kernel/i386/h/pmap.h
        kernel/i386/h/proc.h
        kernel/i386/h/prototypes.h
        kernel/i386/h/psl.h
        kernel/i386/h/reg.h
        kernel/i386/h/segments.h
        kernel/i386/h/sel.h
        kernel/i386/h/stdarg.h
        kernel/i386/h/trap.h
        kernel/i386/h/tss.h
        kernel/i386/h/types.h
        kernel/i386/h/vmparam.h
        kernel/i386/asm.h
        kernel/i386/cpu.c
        kernel/i386/machdep.c
        kernel/i386/pmap.c
        kernel/i386/segments.h
        kernel/i386/sel.h
        kernel/i386/sigframe.h
        kernel/i386/specialreg.h
        kernel/i386/trap.c
        kernel/sys/ingreslock.c
        kernel/sys/init_main.c
        kernel/sys/init_sysent.c
        kernel/sys/kern_acct.c
        kernel/sys/kern_clock.c
        kernel/sys/kern_descrip.c
        kernel/sys/kern_exec.c
        kernel/sys/kern_exit.c
        kernel/sys/kern_fork.c
        kernel/sys/kern_mman.c
        kernel/sys/kern_proc.c
        kernel/sys/kern_prot.c
        kernel/sys/kern_prot2.c
        kernel/sys/kern_resource.c
        kernel/sys/kern_sig.c
        kernel/sys/kern_sig2.c
        kernel/sys/kern_subr.c
        kernel/sys/kern_synch.c
        kernel/sys/kern_sysctl.c
        kernel/sys/kern_time.c
        kernel/sys/kern_xxx.c
        kernel/sys/quota_kern.c
        kernel/sys/quota_subr.c
        kernel/sys/quota_sys.c
        kernel/sys/quota_ufs.c
        kernel/sys/subr_log.c
        kernel/sys/subr_prf.c
        kernel/sys/subr_rmap.c
        kernel/sys/subr_xxx.c
        kernel/sys/sys_generic.c
        kernel/sys/sys_inode.c
        kernel/sys/sys_kern.c
        kernel/sys/sys_net.c
        kernel/sys/sys_pipe.c
        kernel/sys/sys_process.c
        kernel/sys/sys_socket.c
        kernel/sys/syscalls.c
        kernel/sys/tty.c
        kernel/sys/tty_conf.c
        kernel/sys/tty_pty.c
        kernel/sys/tty_subr.c
        kernel/sys/tty_tb.c
        kernel/sys/tty_tty.c
        kernel/sys/ufs_alloc.c
        kernel/sys/ufs_bio.c
        kernel/sys/ufs_bmap.c
        kernel/sys/ufs_disksubr.c
        kernel/sys/ufs_dsort.c
        kernel/sys/ufs_fio.c
        kernel/sys/ufs_inode.c
        kernel/sys/ufs_mount.c
        kernel/sys/ufs_namei.c
        kernel/sys/ufs_subr.c
        kernel/sys/ufs_syscalls.c
        kernel/sys/ufs_syscalls2.c
        kernel/sys/uipc_domain.c
        kernel/sys/uipc_mbuf.c
        kernel/sys/uipc_proto.c
        kernel/sys/uipc_socket.c
        kernel/sys/uipc_socket2.c
        kernel/sys/uipc_syscalls.c
        kernel/sys/uipc_usrreq.c
        kernel/sys/vfs_vnops.c
        kernel/sys/vm_proc.c
        kernel/sys/vm_sched.c
        kernel/sys/vm_swap.c
        kernel/sys/vm_swp.c
        kernel/sys/vm_text.c)
